hphp/hack/test/typecheck/inout/bad_inout_use_lvalue7.php.exp
File "bad_inout_use_lvalue7.php", line 9, characters 13-24:
You cannot decorate this argument as `inout` (Parsing[1002])
